--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -5,10 +5,10 @@
       </div>
       <div id="form-box" class="col-md-12">
         <h2>Preencha os dados da melhor forma possível para encontrar mais rápido sua vaga!</h2>
-        <form action="">
+        <form action="/jobs/add" method="POST">
           <div class="form-group">
-            <label for="title">Título da vaga:</label>
-            <input type="text" class="form-control" id="title" name="title" placeholder="Digite o título da vaga" required>
+            <label for="titulo">Título da vaga:</label>
+            <input type="text" class="form-control" id="titulo" name="titulo" placeholder="Digite o título da vaga" required>
             <small id="titleHelp" class="form-text text-muted">O título é muito importante, seja claro e objetivo.</small>
           </div>
           <div class="form-group">
