--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,11 @@
     <div id="jobs-container" class="container">
       <div class="row">
         <div class="col-md-12">
+          {{#if search}}
+          <h2 id="job-list-title">buscando vagas que contem : {{search}}</h2>
+          {{else}}
           <h2 id="job-list-title">Veja as nossas vagas em destaque</h2>
+          {{/if}}
           <ul id="job-list" class="list-group">
             {{#each jobs}}
             <li class="list-group-item {{#if dataValues.novo_trabalho}}new-job{{/if}}">
